# test-taska

./: pyproject.toml
task1/: export.py  main.py  specs.py
task1-bs4-requests/: export.py  main.py  parse_details.py  template.xlsx
task1-bs4-requests/result/: product_details.xlsx
task1/export/: product_details.json  product_details.xlsx
task2-selenium/: main_selenium.py  parse_details.py  parse_spec.py
task2-selenium-playwright/: main_selenium.py  parse_details.py  parse_spec.py
task2-selenium/result/: product_details.json  product_details.xlsx
task3-playwright/: export.py  main_playwright.py  parse_details.py  parse_spec.py  template.xlsx
task3-playwright/result/: product_details.json  product_details.xlsx
